# OpenGL_Learn

./: CMakeLists.txt  readme.md
assets/shaders/: main.vs
include/: camera.hpp  shader.hpp
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  shader.cpp
src/shaders/: main.fs  main.vs
